test/files/neg/anytrait.check
anytrait.scala:5: error: this statement is not allowed in universal trait extending from class Any
  { x += 1 }
      ^
one error found
